// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Removes isQuiet 1`] = `
"import { TimeField } from "@react-spectrum/s2";
let isQuiet = true;
let props = {isQuiet: true};
<div>
  <TimeField />
  <TimeField />
  <TimeField />
  <TimeField />
  <TimeField />
  <TimeField // TODO(S2-upgrade): check this spread for style props
  {...props} />
</div>"
`;

exports[`changes validationState to isInvalid or nothing 1`] = `
"import { TimeField } from "@react-spectrum/s2";
  let validationState = 'invalid';
  let props = {validationState: 'invalid'};
  <div>
    <TimeField isInvalid />
    <TimeField />
    <TimeField // TODO(S2-upgrade): Prop validationState could not be automatically updated because validationState could not be followed.
    validationState={validationState} />
    <TimeField // TODO(S2-upgrade): check this spread for style props
    {...props} />
  </div>"
`;
